--- a/R_Notebook_bsc.Rmd
+++ b/R_Notebook_bsc.Rmd
@@ -46,9 +46,9 @@ Analyzing the output files from SLiM
 setwd("~/Documents/GitHub/2502_emma_bsc/Outputs/") #setting the working directory
 getwd()  # Prints the current working directory
 ## all SLiM output files which shiw nonrandom mating with mate choice for least relatedness
-slim_out_files1 <- list.files(pattern = "_nonrandom_notrelated_")
+slim_out_files <- list.files(pattern = "_nonrandom_notrelated_")
 
-length(slim_out_files1)
+length(slim_out_files)
 #install.packages("hierfstat")
 library("hierfstat")
 
@@ -58,7 +58,7 @@ library("hierfstat")
 row_numbers <- seq(1, 491, by = 10)
 #row_names <- paste(row_numbers, "reps", "seed", sep = ";")
 
-results_df <- matrix(NA ,nrow = length(slim_out_files1), ncol = (length(row_numbers) + 2))
+results_df <- matrix(NA ,nrow = length(slim_out_files), ncol = (length(row_numbers) + 2))
 colnames(results_df) <- c(row_numbers,"reps","seed")
 length(c(row_numbers,"reps","seed"))
 dim(results_df)
@@ -67,9 +67,83 @@ dim(results_df)
 for(i in 1:length(slim_out_files)){ 
   
   single_file <- slim_out_files[i] ## this is the name of a single SLiM result file
-  get_the_reps <- as.numeric(gsub(".*_reps_|.csv*", "", single_file)) ## use gsub() to get the value of 'reps' that we saved in the name of the results file
+  get_the_reps <- as.numeric(gsub(".*_reps_([0-9]+)_.*", "\\1", single_file))  ## use gsub() to get the value of 'reps' that we saved in the name of the results file
+  get_the_seed <- as.numeric(gsub(".*_seed =|\\.csv","",single_file)) ## and for the seed....
   
+  results_df[i,"reps"] <- get_the_reps ## record the value of 'r' for this particular results file
+  #.*_reps_ → Matches everything before _reps_
+  #([0-9]+) → Captures one or more digits (the reps number)
+  #_.* → Matches everything after the number (so it gets removed)
+  #"\\1" → Extracts only the number inside ().
+  
+  results_df[i,"seed"] <- get_the_seed ## record the seed for this particular results file
+  
+  # Read the CSV file, ensure that it recognizes the header
+  df <- read.csv(single_file, header = TRUE) 
+  
+  # Ensure the column names are correct
+  colnames(df) <- c("cycle", "Heterozygosity")  
+
+  # Match cycle numbers to the matrix column names
+  matched_indices <- match(df$cycle, colnames(results_df))
+
+  # Assign heterozygosity values to the correct positions in results_df
+  results_df[i, matched_indices] <- df$Heterozygosity  
+
 }
+
+# Calculate column means (excluding the last two columns: "reps" and "seed")
+column_means <- colMeans(results_df[, 1:(ncol(results_df)-2)], na.rm = TRUE)
+# Create a new row with NA for "reps" and "seed" columns
+mean_row <- c(column_means, NA, NA)
+# Bind the new row to the bottom of results_df
+results_df <- rbind(results_df, mean_row)
+# Assign row names 
+rownames(results_df)[nrow(results_df)] <- "Mean"
+
+# Print the final matrix with the mean row
+print(results_df)
+
+
+
+print(results_df)
+
+write.csv(results_df, "Results_nonrandom_notrelated.csv", row.names = F) #write a file with my results
+
+
 ```
 
+
+Now i have my results stored in a matrix. This makes it easier to analyze the results. 
+```{r}
+
+# Extract the cycles (generations) from column names - i dont want the last two entries (seed and reps)
+#This will be helpful for the plot
+cycle_numbers <- as.numeric(colnames(results_df)[1:(ncol(results_df)-2)]) 
+
+# Extract the heterozygosity values (excluding the last row "Mean" and last two columns "reps" & "seed")
+heterozygosity_values <- results_df[1:(nrow(results_df)-1), 1:(ncol(results_df)-2)]
+
+# Extract the mean heterozygosity values from the last row --> Last row, so we can use nrow
+mean_values <- results_df[nrow(results_df), 1:(ncol(results_df)-2)]
+
+# Create the plot
+matplot(
+  cycle_numbers,  # X-axis: Generations
+  t(heterozygosity_values),  # Transpose to align data correctly
+  type = "p",  # "p" for points
+  pch = 16,  # Use small dots for points
+  col = rgb(0.4, 0.6, 1, 0.2),  # Blue with transparency --> rgb is kind of nice, (red, green, blue, alpha)
+  xlab = "Generation (Cycle)",
+  ylab = "Heterozygosity",
+  main = "Heterozygosity Across Generations - nonrandom-mating selecting for nonrelatedness",
+  cex.main = 0.8  # Makes title smaller
+)
+
+# Add the mean line
+lines(cycle_numbers, mean_values, col = "orange", lwd = 2)  # Red solid line
+
+
+
+```
 
